force-app/main/default/objects/Campaign__c/fields/Achievement__c.field-meta.xml
<CustomField>
    <fullName>Achievement__c</fullName>
    <label>Achievement</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>