force-app/main/default/objects/Campaign__c/fields/Actual_Investment__c.field-meta.xml
<CustomField>
    <fullName>Actual_Investment__c</fullName>
    <label>Actual Investment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>