force-app/main/default/objects/Campaign__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Product Exhibition</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Road Show</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Customer Invitation</fullName>
                <isActive>false</isActive>
                <label>Customer Invitation</label>
            </value>
            <value>
                <fullName>Factory Visit</fullName>
                <isActive>false</isActive>
                <label>Factory Visit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>