force-app/main/default/objects/Campaign__c/fields/Forecasted_Income__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Income__c</fullName>
    <label>Forecasted Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>