force-app/main/default/objects/Campaign__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Customer__c</columns>
    <columns>Achievement__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>